--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Instrumentos, Andino, Historia, Diseños">
     <title>Taki Kapchiy La musica de los andes</title>
     <link rel="shortcut icon" href="img/LOGO.png" type="image/x-icon">
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/menu-bar.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/4edbf8ff12.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -100,5 +100,4 @@
         </div>
       </footer>
 </body>
-/*comentario jlmunozdiaz*/
 </html>
