--- a/instrumentos.html
+++ b/instrumentos.html
@@ -5,10 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Instrumentos</title>
+  <link rel="stylesheet" href="css/menu-bar.css">
 </head>
 <body>
   <header>
-    
+    <nav>
+      <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            <a href="index.html" class="enlace">
+                <img src="img/logo/Logo_sin_slogan-removebg-preview.png" alt="" class="logo">
+            </a>
+            <ul class="menu">
+                <li><a class="active" href="">Inicio</a></li>
+                <li><a href="instrumentos.html">Instrumentos</a>
+                  <ol>
+                    <li><a href="#Cuerda">Cuerda</a></li>
+                    <li><a href="#Madera">Madera</a></li>
+                    <li><a href="#Viento">Viento</a></li>
+                  </ol>
+                </li>
+                <li><a href="historia.html">Historia</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+    </nav>
   </header>
+  <main>
+
+  </main>
 </body>
 </html>
