--- a/instrumentos.html
+++ b/instrumentos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,33 +8,51 @@
   <title>Instrumentos</title>
   <link rel="stylesheet" href="css/menu-bar.css">
 </head>
+
 <body>
   <header>
     <nav>
       <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-                <i class="fa-solid fa-bars"></i>
-            </label>
-            <a href="index.html" class="enlace">
-                <img src="img/logo/Logo_sin_slogan-removebg-preview.png" alt="" class="logo">
-            </a>
-            <ul class="menu">
-                <li><a class="active" href="">Inicio</a></li>
-                <li><a href="instrumentos.html">Instrumentos</a>
-                  <ol>
+      <label for="check" class="checkbtn">
+        <i class="fa-solid fa-bars"></i>
+      </label>
+      <a href="index.html" class="enlace">
+        <img src="img/logo/Logo_sin_slogan-removebg-preview.png" alt="" class="logo">
+      </a>
+      <ul class="menu">
+        <li><a class="active" href="">Inicio</a></li>
+        <li><a href="instrumentos.html">Instrumentos</a>
+          <!--<ol>
                     <li><a href="#Cuerda">Cuerda</a></li>
                     <li><a href="#Madera">Madera</a></li>
                     <li><a href="#Viento">Viento</a></li>
-                  </ol>
-                </li>
-                <li><a href="historia.html">Historia</a></li>
-                <li><a href="contactos.html">Contactos</a></li>
-                <li><a href="">Login</a></li>
-            </ul>
+                  </ol>-->
+        </li>
+        <li><a href="historia.html">Historia</a></li>
+        <li><a href="contactos.html">Contactos</a></li>
+        <li><a href="">Login</a></li>
+      </ul>
     </nav>
   </header>
   <main>
+    <h1>Insture</h1>
+    <section>
+      <h4></h4>
+      <div>
 
+      </div>
+    </section>
+    <section>
+      <div>
+
+      </div>
+    </section>
+    <section>
+      <div>
+
+      </div>
+    </section>
   </main>
 </body>
+
 </html>
