--- a/historia.html
+++ b/historia.html
@@ -87,11 +87,14 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut, quibusdam doloremque, eaque perspiciatis natus corrupti fuga veniam blanditiis architecto magni dicta exercitationem amet aspernatur officiis autem incidunt quis aliquam eveniet.</p>
         </div>
     </section>
+    <section>
+    <div>
     <script>
         function showDiv1(){
             document.getElementById('div1').style.display = '';
             document.getElementById('div2').style.display = 'none';
             document.getElementById('div3').style.display = 'none';
+            document.getElementById('div4').style.display = 'none';
         }
     </script>
     <script>
@@ -99,6 +102,7 @@
             document.getElementById('div1').style.display = 'none';
             document.getElementById('div2').style.display = '';
             document.getElementById('div3').style.display = 'none';
+            document.getElementById('div4').style.display = 'none';
         }
     </script>
     <script>
@@ -106,30 +110,282 @@
             document.getElementById('div1').style.display = 'none';
             document.getElementById('div2').style.display = 'none';
             document.getElementById('div3').style.display = '';
+            document.getElementById('div4').style.display = 'none';
         }
     </script>
-    <section>
-        <input type="submit" value="Acrofonos" onclick="showDiv1()"><a> | </a><br>
-        <input type="submit" value="Aerofonos" onclick="showDiv2()"><a> | </a><br>
-        <input type="submit" value="Jototo" onclick="showDiv3()">
+    <script>
+        function showDiv4(){
+            document.getElementById('div1').style.display = 'none';
+            document.getElementById('div2').style.display = 'none';
+            document.getElementById('div3').style.display = 'none';
+            document.getElementById('div4').style.display = '';
+        }
+    </script>
+        <input type="submit" value="Aerófonos" onclick="showDiv1()"><a> | </a><br>
+        <input type="submit" value="Cordófonos" onclick="showDiv2()"><a> | </a><br>
+        <input type="submit" value="Idiófonos" onclick="showDiv3()"><a> | </a><br>
+        <input type="submit" value="Membranófonos" onclick="showDiv4()">
+    </div>
         <div id="div1" style="">
-            seguros <br>
-            sssss <br>
-            ssssssssss <br>
-            ppdpdpdpd <br>
+            <div class="div11">
+                <div class="iz">
+                    <img src="" alt="">
+                </div>
+                <div class="de">
+                    <h2>Flauta de Caña</h2>
+                    <br>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores explicabo quibusdam voluptates accusamus rerum. Deserunt quis nam aperiam, minus molestias excepturi fugiat perspiciatis, asperiores sequi consequatur, quibusdam non optio illum?</p>
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <h2>Zampoña o Siku</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam deserunt, dolorum itaque praesentium aliquam iste assumenda voluptatem necessitatibus. Quas explicabo natus ullam ab, fugiat repellendus. Molestias minima dolore quo.</p>
+                </div>
+                <div class="de">
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <img src="" alt="">
+                </div>
+                <div class="de">
+                    <h2>Antara</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nihil quaerat vel error, cupiditate voluptatem esse. Ipsa corporis, sunt quaerat quo nesciunt expedita beatae temporibus praesentium voluptatem ut recusandae culpa.</p>
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <h2>Pingullo</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam at cupiditate iste sapiente neque perspiciatis veritatis dolor expedita, voluptatem excepturi totam alias possimus. Numquam tempore ex minima nostrum nemo iste.</p>
+                </div>
+                <div class="de">
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <img src="" alt="">
+                </div>
+                <div class="de">
+                    <h2>Quena</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde qui rerum quibusdam repellat nobis odit minus amet necessitatibus doloribus ducimus voluptatem, omnis dignissimos aperiam ea, consequuntur mollitia pariatur, debitis nisi.</p>
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <h2>Quenacho</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, molestias expedita aliquid est nesciunt id laboriosam laborum cumque, minus consectetur error? Maiores facilis placeat repudiandae dolores ratione? Vitae, porro distinctio!</p>
+                </div>
+                <div class="de">
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <img src="" alt="">
+                </div>
+                <div class="de">
+                    <h2>Ocarina</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti ab suscipit voluptates at ex illo earum dicta, iste quisquam deleniti, dolore corporis quos laboriosam animi odio culpa quam in et.</p>
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <h2>Caracol</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam labore atque, reprehenderit consequatur mollitia possimus, fugiat asperiores alias amet quas perferendis ea. Dolor ipsum non, ut mollitia magnam facere?</p>
+                </div>
+                <div class="de">
+                    <img src="" alt="">
+                </div>  
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <img src="" alt="">
+                </div>
+                <div class="de">
+                    <h2>Pututo</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <h2>Flauta Andina</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus et consequuntur perspiciatis explicabo quas inventore voluptate cumque recusandae deserunt repudiandae! Architecto repudiandae quaerat doloremque corporis enim officiis laudantium sed rerum!</p>
+                </div>
+                <div class="de">
+                    <img src="" alt="">
+                </div>
+            </div>
         </div>
+
         <div id="div2" style="display: none;">
-            seguros 122222<br>
-            sssss <br>
-            ssssssssss <br>
-            ppdpdpdpd <br>
-            
+            <div class="div11">
+                <div class="iz">
+                    <img src="" alt="">
+                </div>
+                <div class="de">
+                    <h2>Arpa</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <h2>Guitarra</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+                <div class="de">
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <img src="" alt="">
+                </div>
+                <div class="de">
+                    <h2>Charango</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <h2>Violin</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+                <div class="de">
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <img src="" alt="">
+                </div>
+                <div class="de">
+                    <h2>Bandurria</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <h2>Roncoco</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+                <div class="de">
+                    <img src="" alt="">
+                </div>
+            </div>
         </div>
+
         <div id="div3" style="display: none;">
-            seguros 2333333<br>
-            sssss <br>
-            ssssssssss <br>
-            ppdpdpdpd <br>
+            <div class="div11">
+                <div class="iz">
+                    <img src="" alt="">
+                </div>
+                <div class="de">
+                    <h2>Matraca</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <h2>Chucho Peruano</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+                <div class="de">
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <img src="" alt="">
+                </div>
+                <div class="de">
+                    <h2>Sonajero o Chajchas</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <h2>Marimba</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+                <div class="de">
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <img src="" alt="">
+                </div>
+                <div class="de">
+                    <h2>Quijada</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+            </div>
+        </div>
+
+        <div id="div4" style="display: none;">
+            <div class="div11">
+                <div class="iz">
+                    <img src="" alt="">
+                </div>
+                <div class="de">
+                    <h2>Tinya</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <h2>Cajita Peruana</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+                <div class="de">
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <img src="" alt="">
+                </div>
+                <div class="de">
+                    <h2>Tambor</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+            </div>
+            <div class="div11">
+                <div class="iz">
+                    <h2>Bombo</h2>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe suscipit, eos porro omnis repellendus dolorum necessitatibus in fuga rem minima quos? Nostrum aperiam saepe maxime itaque eaque possimus voluptates amet.</p>
+                </div>
+                <div class="de">
+                    <img src="" alt="">
+                </div>
+            </div>
         </div>
     </section>
     
