--- a/index.html
+++ b/index.html
@@ -36,18 +36,62 @@
         <div class="cont_banner">
             <img src="img/inicio/Banner.png" class="banner" alt="">
         </div>
-        <section class="articles1">
-            <article>
+
+        <section class="superior">
+            <article class="articles1">
                 <h2>Taki Kapchiy</h2>
                     <p align="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nemo ullam provident quaerat corporis ipsam dolor cumque dolorum. Tempore non ratione veritatis debitis deleniti? Dolorem facilis corrupti tempora iusto deleniti.
                     .</p> 
             </article>
-        </section>
             <article class="img_article1">
                 <img src="img/inicio/vision1.jpg" class="intro" alt="">
             </article>
-        <div class="carrusel">
-            <img src="img/inicio/Impresión del carrusel _ Zazzle_com.jpg" alt="">
+        </section>
+        <div id="Carrusel">
+            <div class="itemcarrusel" id="itemCarrusel-1">
+                <div class="tarjetaCarrusel" id="tarjetaCarrusel-1">
+                    <img src="img/inicio/Charangos.png" class="img-carrusel" alt="">
+                </div>
+                <div class="flechasCarrusel">
+                    <a href="#itemCarrusel-3">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </a>
+                    <a href="#itemCarrusel-2">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="itemcarrusel" id="itemCarrusel-2">
+                <div class="tarjetaCarrusel" id="tarjetaCarrusel-2">
+                    <img src="img/inicio/Impresión del carrusel _ Zazzle_com.jpg" class="img-carrusel" alt="">
+                </div>
+                <div class="flechasCarrusel">
+                    <a href="#itemCarrusel-1">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </a>
+                    <a href="#itemCarrusel-3">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </a>  
+                </div>
+            </div>
+            <div class="itemcarrusel" id="itemCarrusel-3">
+                <div class="tarjetaCarrusel" id="tarjetaCarrusel-3">
+                    <img src="img/inicio/Are You a Millennial Boss_ Here's How to Work With Boomers and Xers.png" class="img-carrusel" alt="">
+                </div>
+                <div class="flechasCarrusel">
+                    <a href="#itemCarrusel-2">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </a>
+                    <a href="#itemCarrusel-1">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div id="contenedorcarrusel">
+            <a href="#itemCarrusel-1"><i class="fa-light fa-rectangle"></i></a>
+            <a href="#itemCarrusel-2"><i class="fa-light fa-rectangle"></i></a>
+            <a href="#itemCarrusel-3"><i class="fa-light fa-rectangle"></i></a>
         </div>
         <section class="articles2">
             <article>
@@ -57,7 +101,6 @@
                 <h2>Visión</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure explicabo corrupti et, aspernatur voluptatum laborum vero eos dolor, hic minima molestiae ipsa nesciunt consectetur maxime culpa dignissimos labore expedita. Suscipit!.</p> 
             </article>
-        </section>
             <article class="img_article2">
               <img src="img/inicio/mision.jpeg" class="mision_vision" alt="">
             </article>
