--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="Carrusel">
             <div class="itemcarrusel" id="itemCarrusel-1">
                 <div class="tarjetaCarrusel" id="tarjetaCarrusel-1">
-                    <img src="img/inicio/Charangos.png" class="img-carrusel" alt="">
+                    <img src="img/inicio/Productos.png" class="img-carrusel" alt="">
                 </div>
                 <div class="flechasCarrusel">
                     <a href="#itemCarrusel-3">
@@ -88,13 +88,8 @@
                 </div>
             </div>
         </div>
-        <div id="contenedorcarrusel">
-            <a href="#itemCarrusel-1"><i class="fa-light fa-rectangle"></i></a>
-            <a href="#itemCarrusel-2"><i class="fa-light fa-rectangle"></i></a>
-            <a href="#itemCarrusel-3"><i class="fa-light fa-rectangle"></i></a>
-        </div>
-        <section class="articles2">
-            <article>
+        <section class="superior">
+            <article class="articles2">
                 <h2>Misión</h2>
                     <p align="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nemo ullam provident quaerat corporis ipsam dolor cumque dolorum. Tempore non ratione veritatis debitis deleniti? Dolorem facilis corrupti tempora iusto deleniti.
                     .</p>
@@ -105,30 +100,39 @@
               <img src="img/inicio/mision.jpeg" class="mision_vision" alt="">
             </article>
         </section>
-        <div class="cards">
-            <div class="columna1">
-                <img src="img/inicio/Charangos.png" alt="png">
+        <div class="container">
+            <div class="card">
+                <img src="img/inicio/Productos.png" alt="png" class="img-card">
                 <h2>Productos</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste eveniet voluptatum laborum nisi inventore magnam ducimus quod, error nemo necessitatibus quibusdam corrupti? Excepturi fugit distinctio explicabo, eaque eius neque numquam?</p>
             </div>
-            <div class="columna2">
-                <img src="img/inicio/Diseños.png" alt="" width="300">
+            <div class="card">
+                <img src="img/inicio/Diseños.png" alt="" class="img-card">
                 <h2>Diseños</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, labore fugit! Eius provident autem ducimus, recusandae ipsam iste repellendus tempore quasi inventore itaque magni officiis error repellat ex. Nostrum, illum.</p>
             </div>
         </div>
-        <div class="enlaces">
-            <div>
-                <img src="" alt="Historia">
+        <div class="Contenedor-enlaces">
+            <div class="card-enlace">
+                <img src="img/inicio/Descubren pasadizos ocultos que habrían sido usados en antiguos rituales psicodélicos.jpg" alt="Historia" class="img-enlace">
+                <div class="txt-enlace">
                 <a href="historia.html">Historia</a>
+                <img src="img/iconos/texto.png" alt="" class="ico-enlace">
+                </div>
             </div>
-            <div>
-                <img src="" alt="Instrumentos">
+            <div class="card-enlace">
+                <img src="img/inicio/Zampoña Flute Marimacha _ Panpipe with case.jpg" alt="Instrumentos" class="img-enlace">
+                <div class="txt-enlace">
                 <a href="instrumentos.html">Instrumentos</a>
+                <img src="img/iconos/zampona.png" alt="" class="ico-enlace">
+                </div>
             </div>
-            <div>
-                <img src="" alt="Contactanos">
+            <div class="card-enlace">
+                <img src="img/inicio/Contacto.jpg" alt="Contactanos" class="img-enlace">
+                <div class="txt-enlace">
                 <a href="contactos.html">Contactos</a>
+                <img src="img/iconos/telefono.png" alt="" class="ico-enlace">
+                </div>
             </div>
         </div>
     </main>
@@ -137,9 +141,9 @@
             <p>Grupo Taki Kapchiy - Todos los derechos &copy; reservados  </p>
         </div>
         <div class="rs">
-            <img src="img/iconos/instagram.png" alt="instagram/png">
-            <img src="img/iconos/facebook.png" alt="facebook/png">
-            <img src="img/iconos/whatsapp.png" alt="whatsapp/png">
+            <img src="img/iconos/instagram.png" alt="instagram/png" class="ico-rs">
+            <img src="img/iconos/facebook.png" alt="facebook/png" class="ico-rs">
+            <img src="img/iconos/whatsapp.png" alt="whatsapp/png" class="ico-rs">
         </div>
       </footer>
 </body>
