--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="img/inicio/Banner.png" class="banner" alt="">
         </div>
 
-        <section class="superior">
+        <section class="Caja1">
             <article class="articles1">
                 <h2>Taki Kapchiy</h2>
                     <p align="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nemo ullam provident quaerat corporis ipsam dolor cumque dolorum. Tempore non ratione veritatis debitis deleniti? Dolorem facilis corrupti tempora iusto deleniti.
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </div>
-        <section class="superior">
+        <section class="Caja2">
             <article class="articles2">
                 <h2>Misión</h2>
                     <p align="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nemo ullam provident quaerat corporis ipsam dolor cumque dolorum. Tempore non ratione veritatis debitis deleniti? Dolorem facilis corrupti tempora iusto deleniti.
@@ -136,14 +136,17 @@
             </div>
         </div>
     </main>
-      <footer>
-        <div>
+      <footer class="pie-pagina">
+        <div class="logo-pie">
+            <img src="img/logo/LOGO.png" alt="">
+        </div>
+        <div class="txt-footer">
             <p>Grupo Taki Kapchiy - Todos los derechos &copy; reservados  </p>
         </div>
         <div class="rs">
-            <img src="img/iconos/instagram.png" alt="instagram/png" class="ico-rs">
-            <img src="img/iconos/facebook.png" alt="facebook/png" class="ico-rs">
-            <img src="img/iconos/whatsapp.png" alt="whatsapp/png" class="ico-rs">
+            <a href=""><img src="img/iconos/instagram.png" alt="instagram/png" class="ico-rs"></a>
+            <a href=""><img src="img/iconos/facebook.png" alt="facebook/png" class="ico-rs"></a>
+            <a href=""><img src="img/iconos/whatsapp.png" alt="whatsapp/png" class="ico-rs"></a>
         </div>
       </footer>
 </body>
