--- a/historia.html
+++ b/historia.html
@@ -18,9 +18,9 @@
                 <img src="img/logo/Logo_sin_slogan-removebg-preview.png" alt="" class="logo">
             </a>
             <ul class="menu">
-                <li><a class="active" href="">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="instrumentos.html">Instrumentos</a></li>
-                <li><a href="historia.html">Historia</a></li>
+                <li><a class="active" href="historia.html">Historia</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
                 <li><a href="">Login</a></li>
             </ul>
@@ -389,6 +389,18 @@
         </div>
     </section>
     
-    <ion-icon name="logo-facebook"></ion-icon>
+    <footer class="pie-pagina">
+        <div class="logo-pie">
+            <img src="img/logo/LOGO.png" alt="">
+        </div>
+        <div class="txt-footer">
+            <p>Grupo Taki Kapchiy - Todos los derechos &copy; reservados </p>
+        </div>
+        <div class="rs">
+            <a href=""><img src="img/iconos/instagram.png" alt="instagram/png" class="ico-rs"></a>
+            <a href=""><img src="img/iconos/facebook.png" alt="facebook/png" class="ico-rs"></a>
+            <a href=""><img src="img/iconos/whatsapp.png" alt="whatsapp/png" class="ico-rs"></a>
+        </div>
+    </footer>
 </body>
 </html>
