--- a/instrumentos.html
+++ b/instrumentos.html
@@ -618,8 +618,18 @@
         </div>
       </div>
     </aside>
-    <footer>
-      <p>Esta página esta hecha con fines Educativos :V</p>
+    <footer class="pie-pagina">
+      <div class="logo-pie">
+        <img src="img/logo/LOGO.png" alt="">
+      </div>
+      <div class="txt-footer">
+        <p>Grupo Taki Kapchiy - Todos los derechos &copy; reservados </p>
+      </div>
+      <div class="rs">
+        <a href=""><img src="img/iconos/instagram.png" alt="instagram/png" class="ico-rs"></a>
+        <a href=""><img src="img/iconos/facebook.png" alt="facebook/png" class="ico-rs"></a>
+        <a href=""><img src="img/iconos/whatsapp.png" alt="whatsapp/png" class="ico-rs"></a>
+      </div>
     </footer>
 </body>
 
