--- a/contactos.html
+++ b/contactos.html
@@ -6,8 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactos</title>
     <link rel="stylesheet" href="css/menu-bar.css">
+    <link rel="stylesheet" href="css/contacto.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            <a href="index.html" class="enlace">
+                <img src="img/logo/Logo_sin_slogan-removebg-preview.png" alt="" class="logo">
+            </a>
+            <ul class="menu">
+                <li><a class="active" href="">Inicio</a></li>
+                <li><a href="instrumentos.html">Instrumentos</a></li>
+                <li><a href="historia.html">Historia</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
+    </header>   
+    <main>
+        <section>
+            <h1>Contactos</h1>
+            <Form>
+
+            </Form>
+        </section>
+        <section>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </section>
+        <section>
+            <div>
+                <img src="" alt="">
+            </div>
+            <div>
+                <p></p>
+            </div>
+        </section>
+
+    </main>
+    <footer class="pie-pagina">
+        <div class="logo-pie">
+            <img src="img/logo/LOGO.png" alt="">
+        </div>
+        <div class="txt-footer">
+            <p>Grupo Taki Kapchiy - Todos los derechos &copy; reservados  </p>
+        </div>
+        <div class="rs">
+            <a href=""><img src="img/iconos/instagram.png" alt="instagram/png" class="ico-rs"></a>
+            <a href=""><img src="img/iconos/facebook.png" alt="facebook/png" class="ico-rs"></a>
+            <a href=""><img src="img/iconos/whatsapp.png" alt="whatsapp/png" class="ico-rs"></a>
+        </div>
+      </footer>
 </body>
 </html>
