cambios en texto

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
         <section class="Caja1">
             <article class="articles1">
                 <h2>Taki Kapchiy</h2>
-                    <p align="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nemo ullam provident quaerat corporis ipsam dolor cumque dolorum. Tempore non ratione veritatis debitis deleniti? Dolorem facilis corrupti tempora iusto deleniti.
-                    .</p> 
+                    <p> Somos Taki Kapchiy una empresa dedicada a la promoción y venta de instrumentos andinos peruanos, aqui encontraras una gran diversidad de instrumentos segun sus categorias, además tendras opciones de personalización para cada uno de ellos y no solo eso, podras conocer la historia que hay detras de cada instrumento musical andino peruano
+                    .</p>
+                    <br>
+                    <p>
+                        Exploremos juntos las mas diversas melodias de los andes peruanos y todo lo que se puede llegar a crear con cada uno de nuestros instrumentos.
+                    </p>
             </article>
             <article class="img_article1">
                 <img src="img/inicio/vision1.jpg" class="intro" alt="">
@@ -91,10 +95,9 @@
         <section class="Caja2">
             <article class="articles2">
                 <h2>Misión</h2>
-                    <p align="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nemo ullam provident quaerat corporis ipsam dolor cumque dolorum. Tempore non ratione veritatis debitis deleniti? Dolorem facilis corrupti tempora iusto deleniti.
-                    .</p>
+                    <p align="justify">Brindar la mejor atención e instrumentos de calidad para todos nuestros clientes, así mismo un mejor sonido por parte de los instrumentos y diseños reveladores o vanguardistas para todo tipo de interesados. Además, que cualquier persona pueda adquirir estos productos a través de precios accesibles y tengan seguridad mediante nuestra garantía.</p>
                 <h2>Visión</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure explicabo corrupti et, aspernatur voluptatum laborum vero eos dolor, hic minima molestiae ipsa nesciunt consectetur maxime culpa dignissimos labore expedita. Suscipit!.</p> 
+                    <p>Ser la empresa número uno en venta de instrumentos musicales a nivel nacional, manteniendo la calidad en el servicio y los productos que ofrecemos al público en general, asimismo mejorando e innovando constantemente para nuestros clientes. </p> 
             </article>
             <article class="img_article2">
               <img src="img/inicio/mision.jpeg" class="mision_vision" alt="">
@@ -104,12 +107,12 @@
             <div class="card">
                 <img src="img/inicio/Productos.png" alt="png" class="img-card">
                 <h2>Productos</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste eveniet voluptatum laborum nisi inventore magnam ducimus quod, error nemo necessitatibus quibusdam corrupti? Excepturi fugit distinctio explicabo, eaque eius neque numquam?</p>
+                <p>Encuentra una gran diversidad de instrumentos andinos en nuestro catalogo y se parte de este mundo de hermosas melodias que te transportan a paisajes insolitos y bellos momentos.</p>
             </div>
             <div class="card">
                 <img src="img/inicio/Diseños.png" alt="" class="img-card">
                 <h2>Diseños</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, labore fugit! Eius provident autem ducimus, recusandae ipsam iste repellendus tempore quasi inventore itaque magni officiis error repellat ex. Nostrum, illum.</p>
+                <p>Personaliza tu instrumento a gusto propio y dejate llevar por tu imaginación para crear tu instrumento andino con tu estilo propio y desenvolverte de gran manera al momento de utilizarlos.</p>
             </div>
         </div>
         <div class="Contenedor-enlaces">
