--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="img/LOGO.png" type="image/x-icon">
     <link rel="stylesheet" href="css/menu-bar.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <script src="https://kit.fontawesome.com/4edbf8ff12.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -152,5 +153,6 @@
             <a href=""><img src="img/iconos/whatsapp.png" alt="whatsapp/png" class="ico-rs"></a>
         </div>
       </footer>
+      <script src="js/bootstrap.js"></script>
 </body>
 </html>
